--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,222 +1,148 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.home.HomeFragment">
+    android:background="@drawable/gradient_overlay_home_fragment">
 
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/upcard"
-        android:layout_width="match_parent"
+    <!-- Логотип и название -->
+    <LinearLayout
+        android:id="@+id/appTitle"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="16dp"
-        app:cardBackgroundColor="@color/Gray_75"
-        app:cardElevation="6dp"
-        app:layout_constraintBottom_toTopOf="@+id/tab_layout_subscription"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:orientation="horizontal"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/appLogo"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:contentDescription="Logo"
+            android:src="@drawable/app_logo_transparent" />
+
+        <TextView
+            android:id="@+id/appName"
+            style="@style/TextAppearance.Headline5"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginStart="8dp"
+            android:gravity="center_vertical"
+            android:text="Subzy"
+            android:textColor="@color/White" />
+    </LinearLayout>
+
+    <!-- Сумма текущих расходов -->
+    <TextView
+        android:id="@+id/currentAmount"
+        style="@style/TextAppearance.Headline7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="₽467"
+        android:textColor="@color/White"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:shapeAppearanceOverlay="@style/CustomShapeUpCard">
+        app:layout_constraintTop_toBottomOf="@id/appTitle" />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+    <!-- Заголовок месяца и стрелки -->
+    <LinearLayout
+        android:id="@+id/monthHeader"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginTop="16dp"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/currentAmount">
+
+        <TextView
+            android:id="@+id/monthTitle"
+            style="@style/TextAppearance.Headline4"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="start"
+            android:text="Апрель 2025"
+            android:textColor="@color/White" />
+
+        <ImageView
+            android:id="@+id/prevMonthButton"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_gravity="center_vertical"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:contentDescription="Previous Month"
+            android:src="@drawable/ic_arrow_back" />
+
+        <View
+            android:layout_width="1dp"
+            android:layout_height="24dp"
+            android:layout_marginHorizontal="16dp"
+            android:background="@color/Gray_30" />
+
+        <ImageView
+            android:id="@+id/nextMonthButton"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_gravity="center_vertical"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:contentDescription="Next Month"
+            android:src="@drawable/ic_arrow_forward_medium" />
+    </LinearLayout>
+
+    <!-- Календарь -->
+    <com.kizitonwose.calendar.view.CalendarView
+        android:id="@+id/calendarView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        app:cv_dayViewResource="@layout/calendar_day"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/monthHeader" />
+
+    <!-- Подписки на выбранный день -->
+    <androidx.cardview.widget.CardView
+        android:id="@+id/todaySubscriptionsCard"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        app:cardBackgroundColor="@color/Gray_70"
+        app:cardCornerRadius="12dp"
+        app:cardElevation="4dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/calendarView">
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp">
+            android:orientation="vertical"
+            android:padding="16dp">
 
-            <!-- Отcтупы -->
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/start_border_upcard"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                app:layout_constraintGuide_begin="18dp" />
-
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/end_border_upcard"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                app:layout_constraintGuide_end="18dp" />
-
-            <!-- Круглый прогресс-бар -->
-            <com.zigis.segmentedarcview.SegmentedArcView
-                android:id="@+id/progress_view"
-                android:layout_width="300dp"
-                android:layout_height="300dp"
-                android:layout_marginTop="62dp"
-                android:elevation="4dp"
-                app:layout_constraintBottom_toTopOf="@id/subscriptionsMetrics"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:sav_segmentSeparationAngle="9"
-                app:sav_segmentThickness="10dp"
-                app:sav_startAngle="140"
-                app:sav_sweepAngle="260"
-                app:sav_useCustomSweepAngles="true"
-                tools:visibility="visible" />
-
-            <com.zigis.segmentedarcview.SegmentedArcView
-                android:id="@+id/progress_view_background"
-                android:layout_width="300dp"
-                android:layout_height="300dp"
-                android:layout_marginTop="62dp"
-                android:elevation="3dp"
-                app:layout_constraintBottom_toTopOf="@id/subscriptionsMetrics"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:sav_segmentSeparationAngle="9"
-                app:sav_segmentThickness="10dp"
-                app:sav_startAngle="140"
-                app:sav_sweepAngle="260" />
-
-            <com.anshok.subzy.util.extensions.DottedCircleView
-                android:id="@+id/dot_inside"
-                android:layout_width="270dp"
-                android:layout_height="270dp"
-                android:layout_gravity="center"
-                android:elevation="4dp"
-                app:layout_constraintBottom_toBottomOf="@id/progress_view_background"
-                app:layout_constraintEnd_toEndOf="@id/progress_view_background"
-                app:layout_constraintStart_toStartOf="@id/progress_view_background"
-                app:layout_constraintTop_toTopOf="@id/progress_view_background" />
-
-            <!-- Градиентная View на заднем плане -->
-            <View
-                android:id="@+id/gradient_background_view"
+            <TextView
+                android:id="@+id/todaySubscriptionsTitle"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:background="@drawable/gradient_overlay_home_fragment"
-                android:elevation="2dp"
-                app:layout_constraintBottom_toTopOf="@id/subscriptionsMetrics"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/currentAmount" />
-
-            <com.anshok.subzy.util.extensions.DottedCircleView
-                android:id="@+id/dot_outside"
-                android:layout_width="350dp"
-                android:layout_height="350dp"
-                android:layout_gravity="center"
-                android:elevation="1dp"
-                app:layout_constraintBottom_toBottomOf="@id/progress_view_background"
-                app:layout_constraintEnd_toEndOf="@id/progress_view_background"
-                app:layout_constraintStart_toStartOf="@id/progress_view_background"
-                app:layout_constraintTop_toTopOf="@id/progress_view_background" />
-
-            <com.anshok.subzy.util.extensions.DottedCircleView
-                android:id="@+id/dot_outside_second"
-                android:layout_width="400dp"
-                android:layout_height="400dp"
-                android:layout_gravity="center"
-                android:elevation="1dp"
-                app:layout_constraintBottom_toBottomOf="@id/progress_view_background"
-                app:layout_constraintEnd_toEndOf="@id/progress_view_background"
-                app:layout_constraintStart_toStartOf="@id/progress_view_background"
-                app:layout_constraintTop_toTopOf="@id/progress_view_background" />
-
-            <!-- Лого и название приложения -->
-            <LinearLayout
-                android:id="@+id/appTitle"
-                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="110dp"
-                android:layout_marginBottom="16dp"
-                android:gravity="center"
-                android:orientation="horizontal"
-                app:layout_constraintEnd_toEndOf="@+id/end_border_upcard"
-                app:layout_constraintStart_toStartOf="@+id/start_border_upcard"
-                app:layout_constraintTop_toTopOf="parent">
-
-                <!-- Лого -->
-                <ImageView
-                    android:id="@+id/appLogo"
-                    android:layout_width="28dp"
-                    android:layout_height="28dp"
-                    android:contentDescription="App Logo"
-                    android:src="@drawable/app_logo_transparent" />
-
-                <!-- Название приложения -->
-                <TextView
-                    android:id="@+id/appName"
-                    style="@style/TextAppearance.Headline4"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_marginStart="8dp"
-                    android:text="Subzy"
-                    android:textColor="@color/White"
-                    android:textStyle="bold" />
-            </LinearLayout>
-
-            <!-- Текущая сумма -->
-            <TextView
-                android:id="@+id/currentAmount"
-                style="@style/TextAppearance.Headline7"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
-                android:layout_marginBottom="16dp"
-                android:text="$1,235"
+                android:text="Подписки на сегодня"
                 android:textColor="@color/White"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="@+id/end_border_upcard"
-                app:layout_constraintStart_toStartOf="@+id/start_border_upcard"
-                app:layout_constraintTop_toBottomOf="@+id/appTitle" />
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
-            <!-- Текст This month bills -->
             <TextView
-                android:id="@+id/monthBills"
-                style="@style/TextAppearance.Headline1"
-                android:layout_width="wrap_content"
+                android:id="@+id/todaySubscriptionsSubtitle"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:elevation="1dp"
-                android:text="This month bills"
+                android:layout_marginTop="4dp"
+                android:text="Нет подписок"
                 android:textColor="@color/Gray_30"
-                app:layout_constraintEnd_toEndOf="@+id/end_border_upcard"
-                app:layout_constraintStart_toStartOf="@+id/start_border_upcard"
-                app:layout_constraintTop_toBottomOf="@+id/currentAmount" />
-
-            <!-- Кнопка See your budget -->
-            <Button
-                android:id="@+id/seeBudgetButton"
-                style="@style/TextAppearance.Headline2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:background="@drawable/shape_22dp_gray55"
-                android:minHeight="32dp"
-                android:text="See your budget"
-                android:textAllCaps="false"
-                android:textColor="@color/White"
-                android:textStyle="bold"
-                app:backgroundTint="@color/Gray_65"
-                app:layout_constraintEnd_toEndOf="@+id/end_border_upcard"
-                app:layout_constraintStart_toStartOf="@+id/start_border_upcard"
-                app:layout_constraintTop_toBottomOf="@+id/monthBills" />
-
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </com.google.android.material.card.MaterialCardView>
-
-
-
-    <!-- Отcтупы -->
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/start_border"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_begin="23dp" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/end_border"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_end="23dp" />
-
-
+                android:textSize="14sp" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
