--- a/app/src/main/res/drawable/bg_selectable_rounded.xml
+++ b/app/src/main/res/drawable/bg_selectable_rounded.xml
@@ -5,7 +5,7 @@
     <item android:id="@android:id/mask">
         <shape android:shape="rectangle">
             <corners android:radius="12dp" />
-            <solid android:color="@android:color/white" />
+            <solid android:color="#FFFFFF" />
         </shape>
     </item>
 
@@ -16,3 +16,4 @@
         </shape>
     </item>
 </ripple>
+
