--- a/app/src/main/res/layout/bottom_sheet_category.xml
+++ b/app/src/main/res/layout/bottom_sheet_category.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/shape_bottom_sheet_background"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingHorizontal="16dp">
 
     <View
         android:id="@+id/bottom_sheet_line"
@@ -45,7 +46,6 @@
         android:id="@+id/categoryList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="10dp"
         android:clipToPadding="false"
