--- a/app/src/main/res/layout/bottom_sheet_edit_name.xml
+++ b/app/src/main/res/layout/bottom_sheet_edit_name.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/shape_bottom_sheet_background">
+    android:background="@drawable/shape_bottom_sheet_background"
+    android:paddingHorizontal="16dp">
 
     <View
         android:id="@+id/line"
@@ -21,7 +22,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
         android:text="Edit name"
         android:textColor="@color/white"
         android:textSize="18sp"
@@ -35,7 +35,6 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginHorizontal="16dp"
         android:backgroundTint="@color/Accent_P_100"
         android:hint="Your name"
         android:inputType="textMultiLine"
