--- a/app/src/main/res/layout/bottom_sheet_help.xml
+++ b/app/src/main/res/layout/bottom_sheet_help.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:background="@drawable/shape_bottom_sheet_background"
     android:orientation="vertical"
-    android:paddingHorizontal="8dp">
+    android:paddingHorizontal="16dp">
 
     <!-- Линия наверху -->
     <View
@@ -45,7 +45,8 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginVertical="8dp"
-        android:background="@color/Gray_50" />
+        android:background="@color/Gray_30"
+        android:alpha="0.6"/>
 
     <LinearLayout
         android:id="@+id/telegramContainer"
