--- a/app/src/main/res/layout/bottom_sheet_theme.xml
+++ b/app/src/main/res/layout/bottom_sheet_theme.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/shape_bottom_sheet_background">
+    android:background="@drawable/shape_bottom_sheet_background"
+    android:paddingHorizontal="16dp">
 
     <!-- Линия наверху -->
     <View
@@ -23,7 +24,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
         android:text="Choose theme"
         android:textColor="@android:color/white"
         android:textSize="18sp"
@@ -41,6 +41,7 @@
         android:background="?attr/selectableItemBackground"
         android:gravity="center"
         android:paddingVertical="12dp"
+        android:layout_marginTop="16dp"
         android:text="Light"
         android:textColor="@android:color/white"
         app:layout_constraintEnd_toEndOf="parent"
