--- a/app/src/main/res/layout/fragment_about_us.xml
+++ b/app/src/main/res/layout/fragment_about_us.xml
@@ -5,16 +5,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/Gray_80"
-    android:paddingStart="24dp"
-    android:paddingEnd="24dp"
+    android:paddingStart="16dp"
+    android:paddingEnd="16dp"
     tools:context=".presentation.settings.AboutUsFragment">
 
     <!-- Кнопка Назад -->
     <ImageButton
         android:id="@+id/back_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginStart="-8dp"
         android:background="?attr/selectableItemBackgroundBorderless"
         android:contentDescription="Back"
         android:src="@drawable/ic_arrow_back"
@@ -24,16 +25,15 @@
     <!-- Заголовок -->
     <TextView
         android:id="@+id/title"
-        style="@style/TextAppearance.BodyLarge"
+        style="@style/TextAppearance.Headline4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="About Us"
         android:textColor="@color/Gray_30"
+        android:layout_marginStart="12dp"
         app:layout_constraintBottom_toBottomOf="@id/back_button"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/back_button"
-        app:layout_constraintHorizontal_bias="0.5" />
+        app:layout_constraintStart_toEndOf="@id/back_button"
+        app:layout_constraintTop_toTopOf="@id/back_button" />
 
     <!-- Иконка -->
     <ImageView
@@ -161,7 +161,7 @@
         android:id="@+id/logoDevIcon"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginBottom="26dp"
+        android:layout_marginBottom="16dp"
         android:contentDescription="logo.dev"
         android:src="@drawable/logo_dev"
         app:layout_constraintBottom_toBottomOf="parent"
