--- a/app/src/main/res/layout/fragment_add_sub_create.xml
+++ b/app/src/main/res/layout/fragment_add_sub_create.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         app:cardBackgroundColor="@color/Gray_75"
         app:cardElevation="6dp"
+        app:strokeWidth="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -29,26 +30,26 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                app:layout_constraintGuide_begin="18dp" />
+                app:layout_constraintGuide_begin="12dp" />
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/end_border_upcard"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                app:layout_constraintGuide_end="18dp" />
+                app:layout_constraintGuide_end="12dp" />
 
             <!-- Кнопка назад -->
             <ImageButton
                 android:id="@+id/back_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="-6dp"
-                android:layout_marginTop="24dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+
+                android:layout_marginTop="16dp"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:contentDescription="Back"
                 android:src="@drawable/ic_arrow_back"
-                app:layout_constraintStart_toStartOf="@+id/start_border_upcard"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <!-- Заголовок страницы -->
@@ -57,12 +58,10 @@
                 style="@style/TextAppearance.Headline4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
+                android:layout_marginStart="12dp"
                 android:text="New Subscription"
                 android:textColor="@color/Gray_30"
-                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@id/back_button"
-                app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/back_button"
                 app:layout_constraintTop_toTopOf="@id/back_button" />
 
@@ -72,12 +71,12 @@
                 android:id="@+id/card_view_new_sub_icon"
                 android:layout_width="72dp"
                 android:layout_height="72dp"
-                android:layout_marginTop="34dp"
+                android:layout_marginTop="12dp"
                 app:cardCornerRadius="14dp"
                 app:cardElevation="4dp"
                 app:layout_constraintDimensionRatio="1:1"
                 app:layout_constraintStart_toStartOf="@id/start_border_upcard"
-                app:layout_constraintTop_toBottomOf="@id/title">
+                app:layout_constraintTop_toBottomOf="@id/back_button">
 
                 <ImageView
                     android:id="@+id/item_logo"
@@ -148,6 +147,7 @@
                     tools:text="5.99" />
             </com.google.android.material.textfield.TextInputLayout>
 
+
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/currency_button"
                 style="@style/TextAppearance.Headline2"
@@ -157,9 +157,8 @@
                 android:text="USD"
                 android:textAllCaps="false"
                 android:textStyle="bold"
-                app:icon="@drawable/ic_arrow_down"
-                app:iconGravity="end"
-                app:iconSize="16dp"
+                app:icon="@drawable/ic_arrow_down_special"
+                app:iconGravity="textEnd"
                 app:iconPadding="8dp"
                 app:backgroundTint="@color/Gray_55"
                 app:cornerRadius="12dp"
@@ -172,15 +171,15 @@
 
 
     <!-- Нижняя карточка с деталями подписки -->
-    <com.google.android.material.card.MaterialCardView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/details_card"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:cardBackgroundColor="@color/Gray_80"
+        android:background="@color/Gray_80"
+        app:layout_constraintTop_toBottomOf="@id/top_card"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/top_card">
+        app:layout_constraintEnd_toEndOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -192,14 +191,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                app:layout_constraintGuide_begin="20dp" />
+                app:layout_constraintGuide_begin="16dp" />
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/end_border"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                app:layout_constraintGuide_end="20dp" />
+                app:layout_constraintGuide_end="16dp" />
 
 
             <!-- Поля информации о подписке -->
@@ -267,7 +266,7 @@
                             android:layout_height="wrap_content"
                             android:background="?attr/selectableItemBackgroundBorderless"
                             android:contentDescription="Arrow"
-                            android:src="@drawable/ic_arrow_forward_medium"
+                            android:src="@drawable/ic_arrow_forward"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
@@ -319,7 +318,7 @@
                             android:layout_height="wrap_content"
                             android:background="?attr/selectableItemBackgroundBorderless"
                             android:contentDescription="Arrow"
-                            android:src="@drawable/ic_arrow_forward_medium"
+                            android:src="@drawable/ic_arrow_forward"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
@@ -369,7 +368,7 @@
                             android:layout_height="wrap_content"
                             android:background="?attr/selectableItemBackgroundBorderless"
                             android:contentDescription="Arrow"
-                            android:src="@drawable/ic_arrow_forward_medium"
+                            android:src="@drawable/ic_arrow_forward"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
@@ -422,7 +421,7 @@
                             android:layout_height="wrap_content"
                             android:background="?attr/selectableItemBackgroundBorderless"
                             android:contentDescription="Arrow"
-                            android:src="@drawable/ic_arrow_forward_medium"
+                            android:src="@drawable/ic_arrow_forward"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
@@ -477,7 +476,7 @@
                             android:layout_height="wrap_content"
                             android:background="?attr/selectableItemBackgroundBorderless"
                             android:contentDescription="Arrow"
-                            android:src="@drawable/ic_arrow_forward_medium"
+                            android:src="@drawable/ic_arrow_forward"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
@@ -531,7 +530,7 @@
                             android:layout_height="wrap_content"
                             android:background="?attr/selectableItemBackgroundBorderless"
                             android:contentDescription="Arrow"
-                            android:src="@drawable/ic_arrow_forward_medium"
+                            android:src="@drawable/ic_arrow_forward"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
@@ -588,7 +587,7 @@
                             android:layout_height="wrap_content"
                             android:background="?attr/selectableItemBackgroundBorderless"
                             android:contentDescription="Arrow"
-                            android:src="@drawable/ic_arrow_forward_medium"
+                            android:src="@drawable/ic_arrow_forward"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
@@ -609,10 +608,11 @@
                 android:text="Add this platform"
                 android:textAllCaps="false"
                 android:textColor="@color/White"
-                app:backgroundTint="@color/Accent_P_100"
+                android:enabled="false"
+                app:backgroundTint="@color/Gray_55"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@id/end_border"
                 app:layout_constraintStart_toStartOf="@id/start_border" />
         </androidx.constraintlayout.widget.ConstraintLayout>
-    </com.google.android.material.card.MaterialCardView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
