--- a/app/src/main/res/layout/fragment_my_sub_upcoming_bills_rv.xml
+++ b/app/src/main/res/layout/fragment_my_sub_upcoming_bills_rv.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.mySub.RvUpcomingBillsFragment">
+    tools:context=".presentation.home.UpcomingBillsFragment">
 
     <!-- RecyclerView для списка предстоящих платежей -->
     <androidx.recyclerview.widget.RecyclerView
@@ -13,25 +13,29 @@
         android:layout_height="0dp"
         android:clipToPadding="false"
         android:paddingTop="8dp"
+        android:paddingBottom="120dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:itemCount="7"
-        tools:listitem="@layout/item_upcoming_bills" />
+        tools:listitem="@layout/item_upcoming_bills"
+        tools:visibility="visible"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/placeholderGroup"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:visibility="gone">
 
         <ImageView
             android:id="@+id/no_subs"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/no_sub_to_show"
+            android:layout_marginTop="24dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -55,10 +59,10 @@
             style="@style/TextAppearance.Headline4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="64dp"
+            android:layout_margin="48dp"
             android:gravity="center"
             android:text="add by button"
-            app:layout_constraintTop_toBottomOf="@id/no_subs_txt"
+            app:layout_constraintBottom_toTopOf="@id/add_subs"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             tools:visibility="visible" />
@@ -67,12 +71,11 @@
             android:id="@+id/add_subs"
             android:layout_width="128dp"
             android:layout_height="128dp"
-            android:layout_marginTop="32dp"
-            android:rotation="90"
-            android:src="@drawable/arrow_down"
-            app:layout_constraintTop_toBottomOf="@id/add_subs_txt"
+            android:layout_marginBottom="24dp"
+            android:src="@drawable/arrow_down_and_right"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             tools:visibility="visible" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
