--- a/app/src/main/res/navigation/main_navigation_graph.xml
+++ b/app/src/main/res/navigation/main_navigation_graph.xml
@@ -12,19 +12,22 @@
         android:label="fragment_home"
         tools:layout="@layout/fragment_home">
         <action
-            android:id="@+id/action_searchFragment_to_detailsSubFragment"
-            app:destination="@id/detailsSubFragment" />
-    </fragment>
+            android:id="@+id/action_homeFragment_to_detailsSubFragment"
+            app:destination="@id/detailsSubFragment">
+            <argument
+                android:name="subscriptionId"
+                app:argType="long" />
+        </action>
 
-    <!-- MySubFragment -->
-    <fragment
-        android:id="@+id/mySubFragment"
-        android:name="com.anshok.subzy.presentation.mySub.MySubFragment"
-        android:label="fragment_spend"
-        tools:layout="@layout/fragment_my_sub">
         <action
-            android:id="@+id/action_mySubFragment_to_detailsSubFragment"
-            app:destination="@id/detailsSubFragment" />
+            android:id="@+id/action_homeFragment_to_addSubSearchFragment"
+            app:destination="@id/addSubSearchFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_calendarFragment"
+            app:destination="@id/calendarFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_settingsFragment"
+            app:destination="@id/settingsFragment" />
     </fragment>
 
     <!-- CalendarFragment -->
@@ -37,13 +40,6 @@
             android:id="@+id/action_calendarFragment_to_detailsSubFragment"
             app:destination="@id/detailsSubFragment" />
     </fragment>
-
-    <!-- WalletFragment -->
-    <fragment
-        android:id="@+id/walletFragment"
-        android:name="com.anshok.subzy.presentation.wallet.WalletFragment"
-        android:label="fragment_wallet"
-        tools:layout="@layout/fragment_wallet"></fragment>
 
     <!-- AddSubSearchFragment -->
     <fragment
