--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.calendar.CalendarFragment">
+    tools:context=".presentation.calendar.CalendarFragment"
+    android:background="@drawable/gradient_overlay_home_fragment">
 
     <!-- Заголовок месяца и стрелки -->
     <LinearLayout
@@ -69,50 +70,80 @@
         android:id="@+id/calendarView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginVertical="16dp"
         app:cv_dayViewResource="@layout/calendar_day"
         app:layout_constraintEnd_toEndOf="@+id/end_border"
         app:layout_constraintStart_toStartOf="@+id/start_border"
         app:layout_constraintTop_toBottomOf="@id/monthHeader" />
 
-    <!-- Подписки на выбранный день -->
-    <androidx.cardview.widget.CardView
-        android:id="@+id/todaySubscriptionsCard"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/calendarSubscriptionList"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginVertical="16dp"
-        app:cardBackgroundColor="@color/Gray_70"
-        app:cardCornerRadius="12dp"
-        app:cardElevation="4dp"
-        app:layout_constraintEnd_toEndOf="@+id/end_border"
+        android:layout_height="0dp"
+        android:paddingBottom="16dp"
+        android:clipToPadding="false"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintTop_toBottomOf="@id/calendarView"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:listitem="@layout/item_subscription_group"
+        tools:visibility="visible" />
+
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/placeholderGroup"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:paddingHorizontal="32dp"
+        android:layout_marginTop="64dp"
+        app:layout_constraintTop_toBottomOf="@+id/calendarView"
         app:layout_constraintStart_toStartOf="@+id/start_border"
-        app:layout_constraintTop_toBottomOf="@id/calendarView">
+        app:layout_constraintEnd_toEndOf="@+id/end_border"
+        android:visibility="gone">
 
-        <LinearLayout
-            android:layout_width="match_parent"
+        <!-- Линия -->
+        <View
+            android:id="@+id/timeline"
+            android:layout_width="0dp"
+            android:layout_height="2dp"
+            android:background="@color/Accent_S_100_88"
+            android:layout_marginHorizontal="32dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+
+
+
+        <!-- Текст 1 -->
+        <TextView
+            android:id="@+id/no_subs_txt"
+            style="@style/TextAppearance.BodyLarge"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="16dp">
+            android:text="Подписок на выбранную дату нет"
+            android:textColor="@color/Gray_30"
+            android:layout_marginTop="24dp"
+            app:layout_constraintTop_toBottomOf="@id/timeline"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <TextView
-                android:id="@+id/todaySubscriptionsTitle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Подписки на сегодня"
-                android:textColor="@color/White"
-                android:textSize="18sp"
-                android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/todaySubscriptionsSubtitle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:text="Нет подписок"
-                android:textColor="@color/Gray_30"
-                android:textSize="14sp" />
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/returnTodayButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:contentDescription="Return to today"
+        android:src="@drawable/ic_calendar_reset"
+        android:visibility="gone"
+        app:tint="@color/White"
+        app:backgroundTint="@color/Accent_S_100_33"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
 
     <!-- Отcтупы -->
     <androidx.constraintlayout.widget.Guideline
