--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -67,7 +67,8 @@
             android:layout_height="wrap_content"
             android:text="Monthly"
             android:textColor="@color/White"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            tools:text="Monthly"/>
 
         <!-- Сумма -->
         <TextView
@@ -89,7 +90,7 @@
             android:textAlignment="viewStart"
             android:textColor="@color/White"
             android:textStyle="bold"
-            tools:text="$1,234,567,890.00" />
+            tools:text="$1,234.00" />
 
 
         <!-- Обновление -->
@@ -219,7 +220,7 @@
                 android:textAlignment="viewStart"
                 android:textColor="@color/White"
                 android:textStyle="bold"
-                tools:text="$1,234,567,890.00" />
+                tools:text="$1,234.00" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
@@ -298,6 +299,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@drawable/tab_background"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="@+id/end_border"
         app:layout_constraintStart_toStartOf="@+id/start_border"
         app:layout_constraintTop_toBottomOf="@id/statsBlock"
@@ -309,18 +311,92 @@
         app:tabTextAppearance="@style/CustomTabText"
         tools:tabs="Your subscriptions, Upcoming bills" />
 
-    <!-- ViewPager2 для отображения контента -->
-    <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/viewPager"
-        android:layout_width="0dp"
+    <LinearLayout
+        android:id="@+id/subscriptionsListContainer"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="4dp"
-        android:visibility="visible"
+        android:animateLayoutChanges="true"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tab_layout_subscription"
-        tools:listitem="@layout/fragment_my_sub_item_rv" />
+        app:layout_constraintTop_toBottomOf="@+id/statsBlock"
+        tools:visibility="visible">
+        <!-- RecyclerView для списка подписок -->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/subscriptionsList"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:clipToPadding="false"
+            android:paddingBottom="120dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/statsBlock"
+            tools:itemCount="7"
+            tools:listitem="@layout/item_subscription"
+            tools:visibility="visible" />
+    </LinearLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/placeholderGroup"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="64dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/statsBlock"
+        tools:visibility="gone">
+
+        <ImageView
+            android:id="@+id/no_subs"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:src="@drawable/no_sub_to_show"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:visibility="visible" />
+
+        <TextView
+            android:id="@+id/no_subs_txt"
+            style="@style/TextAppearance.Headline4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:gravity="center"
+            android:text="No subscriptions"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/no_subs"
+            tools:visibility="visible" />
+
+        <TextView
+            android:id="@+id/add_subs_txt"
+            style="@style/TextAppearance.Headline4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="48dp"
+            android:gravity="center"
+            android:text="add by button"
+            app:layout_constraintBottom_toTopOf="@id/add_subs"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:visibility="visible" />
+
+        <ImageView
+            android:id="@+id/add_subs"
+            android:layout_width="128dp"
+            android:layout_height="128dp"
+            android:layout_marginBottom="24dp"
+            android:src="@drawable/arrow_down_and_right"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:visibility="visible" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
